k8s/nodejs-service-1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-service-1
  labels:
    app: nodejs-service-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-service-1
  template:
    metadata:
      labels:
        app: nodejs-service-1
    spec:
      containers:
        - name: nodejs-service-1
          image: node-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
