k8s/nodejs-service-2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-service-2
  labels:
    app: nodejs-service-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-service-2
  template:
    metadata:
      labels:
        app: nodejs-service-2
    spec:
      containers:
        - name: nodejs-service-2
          image: node-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
