k8s/nodejs-service-1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service-1
  labels:
    app: nodejs-service-1
spec:
  type: ClusterIP
  selector:
    app: nodejs-service-1
  ports:
    - name: http
      port: 3001
      targetPort: 3001
