k8s/nodejs-service-2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service-2
  labels:
    app: nodejs-service-2
spec:
  type: ClusterIP
  selector:
    app: nodejs-service-2
  ports:
    - name: http
      port: 3002
      targetPort: 3002
