k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /service1/?(.*)
            pathType: Prefix
            backend:
              service:
                name: nodejs-service-1
                port:
                  number: 3001
          - path: /service2/?(.*)
            pathType: Prefix
            backend:
              service:
                name: nodejs-service-2
                port:
                  number: 3002
